--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "[my-framework] build --output public"
+
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
